add makefile to abstract commands

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # compiled output
 /dist
 /tmp
-
+/public
 # dependencies
 /node_modules
 
@@ -38,3 +38,6 @@ testem.log
 #System Files
 .DS_Store
 Thumbs.db
+*.tfvars
+*.tfstate
+*.tfstate.backup
