--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 # Editor configuration, see http://editorconfig.org
 root = true
 
-[*]
+[*{.js|json}]
 charset = utf-8
 indent_style = space
 indent_size = 2
@@ -11,3 +11,11 @@ trim_trailing_whitespace = true
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[Makefile]
+charset = utf-8
+indent_style = tabs
+indent_size = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
+
