--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.0.0-beta.31",
     "@angular/common": "^2.4.0",
     "@angular/compiler": "^2.4.0",
+    "@angular/compiler-cli": "^2.4.0",
     "@angular/core": "^2.4.0",
     "@angular/forms": "^2.4.0",
     "@angular/http": "^2.4.0",
@@ -28,15 +30,13 @@
     "@angular/router": "^3.4.0",
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
+    "express": "^4.14.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2",
     "typescript": "~2.0.0",
-    "@angular/cli": "1.0.0-beta.31",
-    "@angular/compiler-cli": "^2.4.0"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "codelyzer": "~2.0.0-beta.1",
